syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.pdnd.interop.uservice.purposemanagement.model.persistence.serializer.v1"
};

message PurposeV1 {
  required string id = 1;
  required string eServiceId = 2;
  required string consumerId = 3;
  required int64 createdAt = 4;
  optional int64 updatedAt = 5;
}

message PurposeVersionV1 {
  required string id = 1;
  required PurposeStateV1 state = 2;
  optional bool suspendedByConsumer = 3;
  optional bool suspendedByProducer = 4;
  required int64 createdAt = 5;
  optional int64 updatedAt = 6;
}

enum PurposeStateV1 {
  DRAFT = 1;
  ACTIVE = 2;
  SUSPENDED = 3;
  WAITING_FOR_APPROVAL = 4;
  ARCHIVED = 5;
}